<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_pessoa"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/pessoas" />
        <item
            android:id="@+id/nav_organizacao"
            android:icon="@drawable/ic_business_black_24dp"
            android:title="@string/organizacao" />
        <item
            android:id="@+id/nav_negocio"
            android:icon="@drawable/ic_business_center_black_24dp"
            android:title="@string/negocio" />
        <item
            android:id="@+id/nav_atividade"
            android:icon="@drawable/ic_assignment_turned_in_black_24dp"
            android:title="@string/atividades" />
    </group>

</menu>
